--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "fluent-ffmpeg": "^2.1.2",
-    "request": "^2.81.0"
+    "md5": "^2.2.1",
+    "melanke-watchjs": "^1.3.1",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0",
+    "wav-file-info": "0.0.8"
   }
 }
