--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "md5": "^2.2.1",
     "melanke-watchjs": "^1.3.1",
+    "mqtt": "^2.8.0",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
     "wav-file-info": "0.0.8"
