--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "md5": "^2.2.1",
     "melanke-watchjs": "^1.3.1",
     "mqtt": "^2.8.0",
+    "play-sound": "^1.1.1",
     "querystring": "^0.2.0",
     "request": "^2.81.0",
     "wav-file-info": "0.0.8"
